Fixed dropdown menu widths and caret displays
Now dropdowns are the same width as the sidebar, and long links are truncated.

--- a/Croogo/webroot/css/admin.css
+++ b/Croogo/webroot/css/admin.css
@@ -9107,6 +9107,7 @@ fieldset[disabled] .add-meta.active {
 }
 .dropdown-submenu {
   position: relative;
+  width: 170px;
 }
 .dropdown-submenu > .dropdown-menu {
   top: 0;
@@ -9119,9 +9120,14 @@ fieldset[disabled] .add-meta.active {
 .dropdown-submenu:hover > .dropdown-menu {
   display: block;
 }
-.dropdown-submenu > a:after {
+.dropdown-submenu > a {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-right: 2em !important;
+}
+.dropdown-submenu > a:before {
   display: block;
-  content: " ";
+  content: '\0000a0';
   float: right;
   width: 0;
   height: 0;
@@ -9130,21 +9136,9 @@ fieldset[disabled] .add-meta.active {
   border-width: 5px 0 5px 5px;
   border-left-color: #cccccc;
   margin-top: 5px;
-  margin-right: 1em;
+  margin-right: -1em;
 }
-/*.dropdown-submenu:hover>a:after {
-	border-left-color:#ffffff;
-}*/
-/*.dropdown-submenu.pull-left {
-	float:none;
-}
-.dropdown-submenu.pull-left>.dropdown-menu {
-	left:-100%;
-	margin-left:10px;
-	-webkit-border-radius:6px 0 6px 6px;
-	-moz-border-radius:6px 0 6px 6px;
-	border-radius:6px 0 6px 6px;
-}*//*
+/*
 	Original file from Cody Lindley: http://codylindley.com/thickbox/
 	Original version: 3.1
 
@@ -9495,7 +9489,7 @@ fieldset[disabled] .add-meta.active {
   }
   .dropdown-submenu > a:after {
     display: block;
-    content: " ";
+    content: '\0000a0';
     float: right;
     width: 0;
     height: 0;
