--- a/Croogo/webroot/less/responsive-navbar.less
+++ b/Croogo/webroot/less/responsive-navbar.less
@@ -38,7 +38,7 @@
 	// Link caret
 	.dropdown-submenu>a:after {
 		display:block;
-		content:" ";
+		content:@whiteSpace;
 		float:right;
 		width:0;
 		height:0;
