--- a/Croogo/webroot/less/submenus.less
+++ b/Croogo/webroot/less/submenus.less
@@ -1,5 +1,6 @@
 .dropdown-submenu {
 	position:relative;
+	width: @crNavWidth;
 }
 .dropdown-submenu>.dropdown-menu {
 	top:0;
@@ -13,10 +14,17 @@
 	display:block;
 }
 
-// Link caret
-.dropdown-submenu>a:after {
+// Force ellipsis on too long links
+.dropdown-submenu>a{
+	overflow:hidden;
+	text-overflow:ellipsis;
+	padding-right: 2em !important;
+}
+
+// CSS Link caret
+.dropdown-submenu>a:before {
 	display:block;
-	content:" ";
+	content:@whiteSpace;
 	float:right;
 	width:0;
 	height:0;
@@ -25,18 +33,5 @@
 	border-width:5px 0 5px 5px;
 	border-left-color:#cccccc;
 	margin-top:5px;
-	margin-right:1em;
+	margin-right:-1em;
 }
-/*.dropdown-submenu:hover>a:after {
-	border-left-color:#ffffff;
-}*/
-/*.dropdown-submenu.pull-left {
-	float:none;
-}
-.dropdown-submenu.pull-left>.dropdown-menu {
-	left:-100%;
-	margin-left:10px;
-	-webkit-border-radius:6px 0 6px 6px;
-	-moz-border-radius:6px 0 6px 6px;
-	border-radius:6px 0 6px 6px;
-}*/
